--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,22 +25,14 @@ jobs:
           version: v1.31
       - name: Coverage
         run: go test -v -race -cover ./...
-      - name: Generate build files (smpp-receiver)
-        uses: crazy-max/ghaction-xgo@v1
-        with:
-          pkg: cmd/smpp-receiver
-          prefix: smpp-receiver
-          targets: linux/amd64,darwin/amd64
-          ldflags: -s -w
-      - name: Generate build files (smpp-repl)
-        uses: crazy-max/ghaction-xgo@v1
-        with:
-          pkg: cmd/smpp-repl
-          prefix: smpp-repl
-          targets: linux/amd64,darwin/amd64
-          ldflags: -s -w
-      - name: Compression (UPX)
-        run: upx build/*
+      - name: Build
+        run: |
+          set -x
+          mkdir -p build
+          GOOS=linux  go build -a -ldflags "-s -w" -o build/smpp-receiver-linux-amd64 ./cmd/smpp-receiver
+          GOOS=linux  go build -a -ldflags "-s -w" -o build/smpp-repl-linux-amd64     ./cmd/smpp-repl
+          GOOS=darwin go build -a -ldflags "-s -w" -o build/smpp-repl-darwin-amd64    ./cmd/smpp-repl
+          upx build/*
       - uses: actions/upload-artifact@v2
         with:
           name: build
