--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.16beta1
-      #      - uses: golangci/golangci-lint-action@master
+          go-version: 1.16
+      - uses: golangci/golangci-lint-action@master
       - run: go test -v -race -cover ./... -coverprofile=coverage.out
       - run: .github/build.sh
       - uses: actions/upload-artifact@v2
