--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,18 +13,12 @@ jobs:
     name: Build
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.16
-      - uses: golangci/golangci-lint-action@master
-      - run: go test -v -race -cover ./... -coverprofile=coverage.out
+          go-version: 1.19
+      - run: go test -v -race -cover ./...
       - run: .github/build.sh
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: dist/*
-      - uses: jandelgado/gcov2lcov-action@v1.0.5
-      - uses: coverallsapp/github-action@v1.0.1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coverage.lcov
